Bug 386114 - KRunner on Wayland always appears under top panel
Summary: KRunner on Wayland always appears under top panel
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.18.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords: usability, wayland-only
: 395840 396617 397029 400192 407332 417661 420247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-23 15:39 UTC by Martin Kostolný
Modified: 2020-06-04 23:37 UTC (History)
34 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments
Yakuake expanded under Wayland with Kickoff panel located at the top of the screen (280.30 KB, image/png)
2019-07-31 23:39 UTC, Eugene
Details
KRunner overlapped by panel, Yakuake not (156.35 KB, image/png)
2020-01-19 02:34 UTC, Janet Blackquill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Kostolný 2017-10-23 15:39:36 UTC
Same problem as here https://bugs.kde.org/show_bug.cgi?id=366726 (resolved for X11) but this happens on wayland.

Steps to reproduce:
1) Place your Plasma Panel to the top edge
2) Open KRunner (Alt+F2)

Plasma 5.11.1
KF 5.39
Qt 5.9.2
Comment 1 Martin Flöser 2017-10-23 18:32:21 UTC
This is a difficult issue. Krunner does not know that there is a panel. KWin on the other side fully trusts KRunner as the Plasmashell setPosition call is used.

Possibilities: KWin raises the KRunner window or KWin repositions the window. Both would require new API. Maybe a semantical setPosition?
Comment 2 Olivier Churlaud 2018-01-18 20:51:38 UTC
This is the same for Yakuake.

(my panel is on top of the screen)
Comment 3 Andrius Štikonas 2018-03-25 21:27:38 UTC
(In reply to Olivier Churlaud from comment #2)
> This is the same for Yakuake.
> 
> (my panel is on top of the screen)

It would also be useful for Yakuake with the panel at the bottom of the screen. Now if users sets Yakuake to 100% height, it doesn't cover panel on X11 but on Wayland Yakuake hides under the bottom panel.
Comment 4 tuxflo 2018-05-23 02:32:17 UTC
Still valid with Plasma 5.12 (running in KDE Neon user edition).
Comment 5 Michail Vourlakos 2018-06-25 12:29:27 UTC
*** Bug 395840 has been marked as a duplicate of this bug. ***
Comment 6 francesco 2018-06-25 13:07:39 UTC
I want just to confirm that as for https://bugs.kde.org/show_bug.cgi?id=395840, this bug is still present in plasma 5.13.

It is reproducible also with Latte Dock ( so with a latte dock top panel ).
Note that also Yakuake first line is covered by the panel.
Comment 7 Alexander Mentyu 2018-07-18 05:53:31 UTC
*** Bug 396617 has been marked as a duplicate of this bug. ***
Comment 8 Alexander Mentyu 2018-08-01 08:36:35 UTC
*** Bug 397029 has been marked as a duplicate of this bug. ***
Comment 9 Bart Ribbers 2018-08-20 12:41:49 UTC
Can confirm this on Plasma 5.13.4 and Qt 5.11.1 and KF 5.46.0. Right now this is my main blocker from using Wayland as a daily driver, as I use krunner extensively (got rid of the main menu) and not being able to see what I type makes it unusable for me, so I'd love to see this fixed.
Comment 10 r.kunschke 2018-09-14 14:30:06 UTC
same Problem here with Plasma 5.13.90, Qt 5.11.1 and KDE Framework 5.50.0
Comment 11 Alexander Mentyu 2018-10-23 13:50:05 UTC
*** Bug 400192 has been marked as a duplicate of this bug. ***
Comment 12 mathojojo 2019-02-15 10:18:45 UTC
Still a problem in Plasma 5.15
Comment 13 Hugh Williams 2019-04-09 19:06:31 UTC
Is it not possible just to make the startup location for krunner configurable i.e. centred on screen or bottom?
Comment 14 Patrick Silva 2019-05-08 16:05:25 UTC
*** Bug 407332 has been marked as a duplicate of this bug. ***
Comment 15 mateusz.szynka 2019-07-26 07:22:41 UTC
There is a walkaround to set position (will test that in the evening)

https://superuser.com/questions/906983/how-can-i-change-the-screen-position-of-krunner-in-kde-plasma-5-x
Comment 16 Hugh Williams 2019-07-26 09:18:03 UTC
(In reply to mateusz.szynka from comment #15)
> There is a walkaround to set position (will test that in the evening)
> 
> https://superuser.com/questions/906983/how-can-i-change-the-screen-position-
> of-krunner-in-kde-plasma-5-x

I am not sure that window rules are working yet for Plasma Wayland
Comment 17 mateusz.szynka 2019-07-26 14:27:12 UTC
Actually you are right. They don't unfortunately...
Comment 18 Eugene 2019-07-31 23:26:52 UTC
*** Bug 408468 has been marked as a duplicate of this bug. ***
Comment 19 Eugene 2019-07-31 23:39:32 UTC
Created attachment 121875 [details]
Yakuake expanded under Wayland with Kickoff panel located at the top of the screen
Comment 20 Rene Leveille 2019-10-11 13:50:09 UTC
I can confirm this is still a problem on plasma 5.16.5 with kde framework 5.62.0
Comment 21 Simon Westersund 2019-10-15 18:32:13 UTC
Confirming that this is still a problem with Plasma 5.17.0, Frameworks 5.63.0, Qt 5.13.1.

Both KRunner and Yakuake (version 3.0.5+) were tested. My panel is on the top edge of the screen and the "Visibility" is set to "Always visible". (With "Windows can cover" the issue is not present, as expected.)
Comment 22 Eugene 2020-01-15 15:21:19 UTC
Seems nobody's gonna fix this old and annoying bug 8(

Plasma KDE 5.17.5
Frameworks KDE: 5.66.0
Qt: 5.12.4
Comment 23 Rene Leveille 2020-01-15 15:42:54 UTC
Is there a way to ping developers to have an update on the status of this issue? Because i'm having the same issue as https://bugs.kde.org/show_bug.cgi?id=395970 as well
Comment 24 Janet Blackquill 2020-01-19 02:33:44 UTC
Yakuake positions itself correctly on Wayland for me, but KRunner is still overlapped by the panel.
Comment 25 Janet Blackquill 2020-01-19 02:34:33 UTC
Created attachment 125235 [details]
KRunner overlapped by panel, Yakuake not
Comment 26 Patrick Silva 2020-01-19 12:33:59 UTC
both krunner and yakuake are still affected on my system.

Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.0
Comment 27 Andrius Štikonas 2020-01-19 14:18:03 UTC
(In reply to Carson Black from comment #24)
> Yakuake positions itself correctly on Wayland for me, but KRunner is still
> overlapped by the panel.

Yakuake does not position itself correctly on your system either, but it's harder to notice unless you set Yakuake terminal height to 100%.

If you set height to 40%, it uses 40% of the whole screen, instead of 40% of available space between panels.
Comment 28 Nate Graham 2020-02-05 21:58:10 UTC
*** Bug 417119 has been marked as a duplicate of this bug. ***
Comment 29 Patrick Silva 2020-02-15 00:19:17 UTC
*** Bug 417661 has been marked as a duplicate of this bug. ***
Comment 30 trmdi 2020-02-28 13:05:47 UTC
Git commit 731a190810440726f2db252b3a935648346f4a12 by Tranter Madi.
Committed on 28/02/2020 at 13:05.
Pushed by trmdi into branch 'master'.

Set a better position for Krunner in wayland

Summary:
In wayland, QScreen::availableGeometry() returns QScreen::geometry(), we could get a better value from plasmashell

Test Plan: Krunner isn't overlapped by a top panel in all cases

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: meven, apol, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27458

M  +58   -32   krunner/view.cpp
M  +2    -0    krunner/view.h
M  +5    -0    shell/strutmanager.cpp
M  +2    -0    shell/strutmanager.h

https://commits.kde.org/plasma-workspace/731a190810440726f2db252b3a935648346f4a12
Comment 31 Nate Graham 2020-02-28 17:58:23 UTC
*** Bug 408468 has been marked as a duplicate of this bug. ***
Comment 32 Patrick Silva 2020-04-19 05:33:53 UTC
*** Bug 420247 has been marked as a duplicate of this bug. ***
Comment 33 Andrius Štikonas 2020-06-04 23:33:58 UTC
Only KRunner is fixed. Reopenning the bug for Yakuake. (It still doesn't work with Plasma 5.19 and yakuake 19.12.3
Comment 34 Andrius Štikonas 2020-06-04 23:37:40 UTC
Sorry, it looks like there is already a dedicated bug for yakuake