Set a better position for Krunner in wayland

Summary:
In wayland, QScreen::availableGeometry() returns QScreen::geometry(), we could get a better value from plasmashell

BUG: 386114

Test Plan: Krunner isn't overlapped by a top panel in all cases

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: meven, apol, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27458